// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when called from babel correctly namespaces all together 1`] = `
"
define('a-module', ['test-package$1.0.0$a-module', './a-local-module', 'fs'], function () {
	require('test-package$1.0.0$a-module');
	require('./a-local-module');
	require('fs');
});"
`;

exports[`when called from babel correctly namespaces define() dependencies 1`] = `
"
define(['test-package$1.0.0$a-module', './a-local-module', 'fs'], function () {});"
`;

exports[`when called from babel correctly namespaces require modules 1`] = `
"
define(function () {
	require('test-package$1.0.0$a-module');
	require('./a-local-module');
	require('fs');
});"
`;

exports[`when called from babel does not namespaces define() module name 1`] = `
"
define('a-module', function () {});"
`;

exports[`when called from liferay-npm-bundler correctly namespaces all together 1`] = `
"
define('test-package$1.0.0$a-module', ['test-package$1.0.0$a-module', './a-local-module', 'fs'], function () {
	require('test-package$1.0.0$a-module');
	require('./a-local-module');
	require('fs');
});"
`;

exports[`when called from liferay-npm-bundler correctly namespaces define() dependencies 1`] = `
"
define(['test-package$1.0.0$a-module', './a-local-module', 'fs'], function () {});"
`;

exports[`when called from liferay-npm-bundler correctly namespaces define() module name 1`] = `
"
define('test-package$1.0.0$a-module', function () {});"
`;

exports[`when called from liferay-npm-bundler correctly namespaces require modules 1`] = `
"
define(function () {
	require('test-package$1.0.0$a-module');
	require('./a-local-module');
	require('fs');
});"
`;

exports[`when called from liferay-npm-bundler logs results correctly 1`] = `
Array [
  Object {
    "level": "info",
    "source": "namespace-modules",
    "things": Array [
      "Namespaced",
      1,
      "define() names,",
      1,
      "define() dependencies,",
      "and",
      1,
      "require() names",
    ],
  },
]
`;
